<resources>
    <string name="app_name">LiveBetterApp</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="save_expense">Save Expense</string>
    <string name="amount_hint">Amount (R)</string>
    <string name="description_hint">Description</string>
    <string name="date_format">%1$d-%2$d-%3$d</string>
    <string name="select_date_hint">Select Date</string>
    <string name="start_time_hint">Start Time</string>
    <string name="end_time_hint">End Time</string>
    <string name="photo_preview">Photo Preview</string>
    <string name="welcome_message">Welcome, %1$s</string>
    <string name="budget_goal_format">Min: R%1$.2f | Max: R%2$.2f</string>
    <string name="no_budget_set">No budget goal set</string>
    <string name="select_or_add_category">Select or add category</string>
    <string name="app_logo">App Logo</string>

</resources>