<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/autoCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_or_add_category"
            android:backgroundTint="#4CAF50"
            android:inputType="text"
            android:minHeight="48dp" />


        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="numberDecimal"
            android:hint="@string/amount_hint"
            android:backgroundTint="#4CAF50"
            android:autofillHints="creditCardNumber"/>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/description_hint"
            android:backgroundTint="#4CAF50"
            android:inputType="text"
            android:autofillHints="name" />


        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:focusable="false"
            android:hint="@string/select_date_hint"
            android:backgroundTint="#4CAF50"
            android:autofillHints="date"/>

        <EditText
            android:id="@+id/etTimeStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:focusable="false"
            android:hint="@string/start_time_hint"
            android:backgroundTint="#4CAF50"
            android:autofillHints="time"/>

        <EditText
            android:id="@+id/etTimeEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:focusable="false"
            android:hint="@string/end_time_hint"
            android:backgroundTint="#4CAF50"
            android:autofillHints="time"/>

        <ImageView
            android:id="@+id/imgPreview"
            android:contentDescription="@string/photo_preview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/btnPickImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/attach_photo" />

        <Button
            android:id="@+id/btnSaveExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_expense"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
